--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/database": "^17.4.0",
     "@react-navigation/native": "^6.0.2",
+    "ajv": "^8.17.1",
     "date-fns": "^2.29.3",
     "expo": "~51.0.14",
     "expo-build-properties": "~0.12.3",
